--- a/TipCalculator/TipCalculator/Resources/layout/activity_main.axml
+++ b/TipCalculator/TipCalculator/Resources/layout/activity_main.axml
@@ -10,17 +10,89 @@
 		android:minHeight="25px"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:id="@+id/linearLayout1" >
+		android:id="@+id/linearLayout1">
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout2">
+			<TextView
+				android:text="Subtotal: "
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/khfgiuiugkih" />
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/subTotal"
+				android:fadingEdge="none"
+				android:inputType="number"/>
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout6">
+			<TextView
+				android:text="Tip Percent: "
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/textView4" />
+			<TextView
+				android:text="0"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/textView1" />
+		</LinearLayout>
 		<SeekBar
 			android:layout_width="match_parent"
 			android:layout_height="100dp"
 			android:layout_below="@id/linearLayout1"
 			android:id="@+id/seekBar1" />
-		<TextView
-			android:text="0"
-			android:textAppearance="?android:attr/textAppearanceMedium"
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/textView1" />
+			android:id="@+id/linearLayout5">
+			<TextView
+				android:text="Tip Value: "
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/basdfert" />
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/tipValue"
+				android:editable="false" />
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout4">
+			<TextView
+				android:text="Total: "
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/textView3" />
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/total"
+				android:editable="false" />
+		</LinearLayout>
 	</LinearLayout>
 </RelativeLayout>
